# CrossyRoad-LI1

./: 2022li1g059.cabal  README.md
doc/htmlT1/: doc-index.html  index.html
doc/htmlT2/: doc-index.html  index.html
doc/htmlT3/: Tarefa3_2022li1g059.html  Tarefa4_2022li1g059.html  doc-index.html  index.html
doc/htmlT4/: Tarefa1_2022li1g059.html  doc-index.html  index.html
doc/htmlT5/: Tarefa3_2022li1g059.html  Tarefa4_2022li1g059.html  doc-index.html  index.html
doc/htmlT6/: Tarefa2_2022li1g059.html  Tarefa5_2022li1g059.html  Tarefa6_2022li1g059.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g059.hs  Tarefa2_2022li1g059.hs  Tarefa3_2022li1g059.hs  Tarefa4_2022li1g059.hs  Tarefa5_2022li1g059.hs  Tarefa6_2022li1g059.hs
tests/: Spec.hs  Tarefa1_2022li1g059_Spec.hs  Tarefa2_2022li1g059_Spec.hs  Tarefa3_2022li1g059_Spec.hs  Tarefa4_2022li1g059_Spec.hs  Tarefa5_2022li1g059_Spec.hs
